[change] alignment - fixed gap due to padding

--- a/public/src/routes/_layout/style.scss
+++ b/public/src/routes/_layout/style.scss
@@ -3,16 +3,16 @@
 }
 
 .appHeader {
-  padding: 0 40px;
-
   &-inner {
     align-items: center;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     height: 60px;
     justify-content: space-between;
     margin: auto;
     max-width: var(--app-max-width);
+    padding: 0 20px;
     width: 100%;
   }
 }
